--- a/web/themes/contrib/civictheme_base/package.json
+++ b/web/themes/contrib/civictheme_base/package.json
@@ -50,5 +50,6 @@
     "twig-testing-library": "^1.2.0",
     "vite": "^5.4.8",
     "vite-plugin-twig-drupal": "^1.4.2"
-  }
+  },
+  "type": "module"
 }
