--- a/web/themes/contrib/civictheme_base/package.json
+++ b/web/themes/contrib/civictheme_base/package.json
@@ -19,7 +19,7 @@
     "dist:dev": "npm run build",
     "lint": "eslint ./components ./.storybook ./webpack && stylelint '{components,assets/sass}/**/*.scss'",
     "lint-fix": "eslint ./components ./.storybook ./webpack --fix && stylelint 'components/**/*.scss' --fix",
-    "postinstall": "patch-package && npm run uikit-install && npm run add-lint-exclusions",
+    "postinstall": "npm run uikit-install && npm run add-lint-exclusions",
     "reset": "rm -rf node_modules > /dev/null; rm -rf lib/uikit > /dev/null",
     "storybook": "storybook dev -p 6006",
     "uikit-install": "rm -Rf lib/uikit > /dev/null 2>&1 && mkdir -p lib/uikit && cp -R node_modules/@civictheme/uikit lib && rm -Rf lib/uikit/dist lib/uikit/storybook-static > /dev/null 2>&1"
@@ -38,16 +38,11 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import-newlines": "^1.4.0",
     "glob": "^11.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-transform-stub": "^2.0.0",
-    "patch-package": "^8.0.0",
     "sass": "1.77.5",
     "storybook": "^8.4.7",
     "stylelint": "^14.16.1",
     "stylelint-config-standard": "^23.0.0",
     "stylelint-config-standard-scss": "^2.0.1",
-    "twig-testing-library": "^1.2.0",
     "vite": "^5.4.8",
     "vite-plugin-twig-drupal": "^1.4.2"
   },
