--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
         "php": ">=8.2",
         "composer/installers": "^2.1",
         "cweagans/composer-patches": "^1.7",
-        "drupal/core-composer-scaffold": "^10.3",
-        "drupal/core-project-message": "^10",
-        "drupal/core-recommended": "^10.3",
+        "drupal/core-composer-scaffold": "10.4.0",
+        "drupal/core-project-message": "10.4.0",
+        "drupal/core-recommended": "10.4.0",
+        "drupal/experience_builder": "dev-0.x",
         "drupal/search_api": "^1.30",
         "drush/drush": "^12",
         "oomphinc/composer-installers-extender": "^2.0",
@@ -61,6 +62,10 @@
                     "url": "https://github.com/dropzone/dropzone/archive/refs/tags/v5.7.2.zip"
                 }
             }
+        },
+        "drupal/experience_builder": {
+            "type": "vcs",
+            "url": "https://git.drupalcode.org/project/experience_builder.git"
         }
     },
     "minimum-stability": "dev",
@@ -161,7 +166,6 @@
             "replace": true,
             "require": [
                 "web/themes/contrib/civictheme/composer.json",
-                "web/modules/custom/civictheme_govcms/composer.json",
                 "web/modules/custom/civictheme_admin/composer.json",
                 "web/modules/custom/civictheme_content/composer.json",
                 "web/modules/custom/civictheme_dev/composer.json",
