--- a/web/themes/contrib/civictheme_base/components/03-organisms/alert/alert.component.yml
+++ b/web/themes/contrib/civictheme_base/components/03-organisms/alert/alert.component.yml
@@ -2,7 +2,7 @@
 
 name: Alert
 
-status: obsolete
+status: experimental
 
 group: Organisms
 
@@ -53,7 +53,6 @@ props:
 
     description:
       type: string
-      $ref: json-schema-definitions://experience_builder.module/textarea
       title: Description
       description: Description.
       examples:
