--- a/web/themes/contrib/civictheme_base/components/03-organisms/promo/promo.component.yml
+++ b/web/themes/contrib/civictheme_base/components/03-organisms/promo/promo.component.yml
@@ -16,11 +16,10 @@ props:
       title: Title
       description: Title text.
       examples:
-        - Sign up for industry news and updates from CivicTheme
+        - 'Sign up for industry news and updates from CivicTheme'
 
     content:
       type: string
-      $ref: json-schema-definitions://experience_builder.module/textarea
       title: Content
       description: Content.
       examples:
@@ -101,15 +100,30 @@ props:
         - 'custom-class'
 
 slots:
-
+  content_main:
+    title: Content
+    description: Content slot.
+    examples:
+      - '<p>{{ content }}</p>'
   content_top:
     title: Content top
     description: Content slot.
     examples:
       - '<p>content_top</p>'
-
+  content_left:
+    title: Content left
+    description: Content slot.
+    examples:
+      - '<p>content_left</p>'
+  content_right:
+    title: Content right
+    description: Content slot.
+    examples:
+      - '<p>content_right</p>'
   content_bottom:
     title: Content bottom
     description: Content slot.
     examples:
       - '<p>content_bottom</p>'
+
+
