--- a/web/themes/contrib/civictheme_base/package.json
+++ b/web/themes/contrib/civictheme_base/package.json
@@ -41,5 +41,8 @@
     "vite": "^5.4.8",
     "vite-plugin-twig-drupal": "^1.4.2"
   },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8"
+  },
   "type": "module"
 }
